--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="white">#FFFFFF</color>
     <color name="gold">#FFC226</color>
+    <color name="green">#4ED144</color>
+    <color name="red">#F44336</color>
 </resources>
