--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="gold">#FFC226</color>
     <color name="green">#4ED144</color>
     <color name="red">#F44336</color>
+    <color name="black">#000000</color>
 </resources>
