--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="green">#4ED144</color>
     <color name="red">#F44336</color>
     <color name="black">#000000</color>
+    <color name="blue">#3443C9</color>
 </resources>
