--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:background="@android:color/black">
+    android:background="@drawable/city_background">
     <TextView
         android:id="@+id/playText"
         android:layout_width="wrap_content"
