--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="red">#F44336</color>
     <color name="black">#000000</color>
     <color name="blue">#3443C9</color>
+    <color name="transparentBlue">#1a5adb</color>
 </resources>
