--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -21,7 +21,7 @@
         android:visibility="gone"
         android:background="@drawable/shop_border">
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/shop"
             android:fontFamily="@font/unispace"
