--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -24,15 +24,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/shop"
+            android:textSize="16sp"
+            android:textColor="@color/white"
             android:fontFamily="@font/unispace"
             android:textAlignment="center"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="16dp"/>
+            android:layout_marginTop="16dp"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/shopList"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:layout_gravity="center"/>
+        <TextView
+            android:id="@+id/notEnoughGold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/not_enough_gold"
+            android:textColor="@color/red"
+            android:fontFamily="@font/unispace"
+            android:textAlignment="center"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="16dp"
+            android:visibility="gone"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
