--- a/app/src/main/res/layout/shop_item.xml
+++ b/app/src/main/res/layout/shop_item.xml
@@ -64,10 +64,10 @@
         app:layout_constraintBottom_toBottomOf="@id/gold"
         app:layout_constraintEnd_toEndOf="parent" />
     <ImageView
-        android:id="@+id/bought"
+        android:id="@+id/equipped"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/shop_item_bought"
+        android:src="@drawable/shop_item_equipped"
         android:alpha=".8"
         android:visibility="gone"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
