--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -9,7 +9,7 @@
         android:id="@+id/gameView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/shop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -18,9 +18,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:orientation="vertical"
-        android:visibility="gone"
-        android:background="@drawable/shop_border">
+        android:visibility="gone">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/shop_border"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
         <TextView
+            android:id="@+id/closeShopButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:text="@string/x"
+            android:textColor="@color/white"
+            android:layout_margin="16dp"
+            android:textAlignment="viewEnd"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_gravity="end" />
+        <TextView
+            android:id="@+id/shopTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/shop"
@@ -29,13 +48,19 @@
             android:fontFamily="@font/unispace"
             android:textAlignment="center"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="16dp"/>
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/shopList"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            app:layout_constraintTop_toBottomOf="@id/shopTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
         <TextView
             android:id="@+id/notEnoughGold"
             android:layout_width="match_parent"
@@ -46,6 +71,10 @@
             android:textAlignment="center"
             android:layout_gravity="center_horizontal"
             android:layout_marginHorizontal="16dp"
-            android:visibility="gone"/>
-    </LinearLayout>
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
