Added more potions and resized shop recycler view so it scrolls

--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -55,10 +55,11 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/shopList"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_margin="16dp"
             android:layout_gravity="center"
             app:layout_constraintTop_toBottomOf="@id/shopTitle"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
         <TextView
@@ -66,7 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/not_enough_gold"
-            android:textColor="@color/red"
+            android:textColor="@color/white"
             android:fontFamily="@font/unispace"
             android:textAlignment="center"
             android:layout_gravity="center_horizontal"
