--- a/app/src/main/res/layout/shop_item.xml
+++ b/app/src/main/res/layout/shop_item.xml
@@ -68,6 +68,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@drawable/shop_item_equipped"
-        android:alpha=".8"
+        android:alpha=".6"
+        android:visibility="gone"/>
+    <ImageView
+        android:id="@+id/itemDuller"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/shop_item_duller"
+        android:alpha=".7"
         android:visibility="gone"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
