--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -14,10 +14,19 @@
         android:id="@+id/shopIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/settingsIcon"
+        app:layout_constraintStart_toEndOf="@id/settingsIcon"
+        android:src="@drawable/shop"/>
+    <ImageView
+        android:id="@+id/settingsIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:src="@drawable/shop"
-        android:layout_margin="16dp"/>
+        android:src="@drawable/cog"
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp" />
     <LinearLayout
         android:id="@+id/subFragmentContainer"
         android:layout_width="wrap_content"
