--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -64,11 +64,13 @@
                     android:textColor="@color/white"
                     android:fontFamily="@font/unispace"
                     android:layout_margin="8dp"/>
-                <SwitchCompat
+                <ToggleButton
                     android:id="@+id/vibrationSwitch"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="8dp"/>
+                    android:layout_width="60dp"
+                    android:layout_height="40dp"
+                    android:layout_margin="8dp"
+                    android:textColor="@color/white"
+                    android:background="@drawable/small_menu_border"/>
             </LinearLayout>
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
