--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -16,14 +16,14 @@
     <TextView
         android:id="@+id/closeSettingsButton"
         android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_height="30dp"
         android:text="@string/x"
         android:textColor="@color/white"
         android:layout_margin="16dp"
-        android:textAlignment="viewEnd"
+        android:textAlignment="center"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_gravity="end" />
+        android:gravity="center_horizontal" />
     <TextView
         android:id="@+id/settingsTitle"
         android:layout_width="wrap_content"
