--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -27,6 +27,13 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp" />
+    <include
+        android:id="@+id/waveUi"
+        layout="@layout/wave_ui"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        app:layout_constraintTop_toBottomOf="@id/shopIcon"
+        android:layout_marginTop="16dp"/>
     <LinearLayout
         android:id="@+id/subFragmentContainer"
         android:layout_width="wrap_content"
