--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -16,7 +16,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="@id/settingsIcon"
         app:layout_constraintStart_toEndOf="@id/settingsIcon"
-        android:src="@drawable/shop"/>
+        android:src="@drawable/shop"
+        android:visibility="gone"/>
     <ImageView
         android:id="@+id/settingsIcon"
         android:layout_width="wrap_content"
