Added done button to shop and got rid of x to close

--- a/app/src/main/res/layout/shop.xml
+++ b/app/src/main/res/layout/shop.xml
@@ -14,17 +14,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
     <TextView
-        android:id="@+id/closeShopButton"
-        android:layout_width="50dp"
-        android:layout_height="30dp"
-        android:text="@string/x"
-        android:textColor="@color/white"
-        android:layout_margin="16dp"
-        android:textAlignment="center"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_gravity="center_horizontal" />
-    <TextView
         android:id="@+id/shopTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -45,7 +34,7 @@
         android:layout_margin="16dp"
         android:layout_gravity="center"
         app:layout_constraintTop_toBottomOf="@id/shopTitle"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/doneButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
     <TextView
@@ -63,4 +52,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+    <Button
+        android:id="@+id/doneButton"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:text="@string/done"
+        android:background="@drawable/small_menu_border"
+        android:textSize="16sp"
+        android:textColor="@color/white"
+        android:fontFamily="@font/unispace"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
