--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/shop_border"
+        android:src="@drawable/menu_border"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -146,6 +146,20 @@
         </LinearLayout>
     </ScrollView>
     <Button
+        android:id="@+id/clearDataButton"
+        android:layout_width="100dp"
+        android:layout_height="40dp"
+        android:text="@string/clearData"
+        android:background="@drawable/small_menu_border"
+        android:textSize="12sp"
+        android:textColor="@color/red"
+        android:fontFamily="@font/unispace"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/doneButton"
+        android:layout_margin="16dp"/>
+    <Button
         android:id="@+id/doneButton"
         android:layout_width="100dp"
         android:layout_height="40dp"
@@ -156,7 +170,63 @@
         android:fontFamily="@font/unispace"
         android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@id/clearDataButton"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="16dp"/>
+
+    <LinearLayout
+        android:id="@+id/clearDataConfirmation"
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/dialog_border"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:visibility="gone">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/clearData"
+            android:textSize="16sp"
+            android:textColor="@color/red"
+            android:fontFamily="@font/unispace"
+            android:layout_marginVertical="8dp"
+            android:layout_gravity="center"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/clearDataConfirmation"
+            android:textSize="12sp"
+            android:textColor="@color/white"
+            android:fontFamily="@font/unispace"
+            android:layout_marginHorizontal="16dp"
+            android:textAlignment="center"
+            android:layout_gravity="center_horizontal" />
+        <Button
+            android:id="@+id/clearDataConfirmButton"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="@string/clearMyData"
+            android:background="@drawable/shop_item_border"
+            android:textSize="12sp"
+            android:textColor="@color/red"
+            android:fontFamily="@font/unispace"
+            android:textAllCaps="false"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginVertical="8dp"/>
+        <Button
+            android:id="@+id/clearDataCancelButton"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:text="@string/changedMyMind"
+            android:background="@drawable/shop_item_border"
+            android:textSize="12sp"
+            android:textColor="@color/white"
+            android:fontFamily="@font/unispace"
+            android:textAllCaps="false"
+            android:layout_marginHorizontal="16dp"/>
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
