--- a/app/src/main/res/layout/shop.xml
+++ b/app/src/main/res/layout/shop.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/shop_border"
+        android:src="@drawable/menu_border"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
