--- a/app/src/main/res/layout/speech.xml
+++ b/app/src/main/res/layout/speech.xml
@@ -57,6 +57,7 @@
         app:layout_constraintStart_toStartOf="@id/speakerName"
         app:layout_constraintEnd_toEndOf="@id/speechBubble"
         app:layout_constraintTop_toBottomOf="@id/speakerName"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
