--- a/app/src/main/res/layout/death_screen.xml
+++ b/app/src/main/res/layout/death_screen.xml
@@ -5,6 +5,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/dialog_border">
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/you_died"
+        android:fontFamily="@font/unispace"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/upgrade"
+        android:fontFamily="@font/unispace"
+        android:textColor="@color/white"
+        android:textAlignment="center"
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/title"
+        android:gravity="center_horizontal" />
     <ImageView
         android:id="@+id/swordIcon"
         android:layout_width="wrap_content"
@@ -12,7 +38,7 @@
         android:src="@drawable/sword_death_icon"
         android:layout_marginTop="32dp"
         android:layout_marginHorizontal="32dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/description"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/healthIcon"/>
     <ImageView
