--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -28,6 +28,16 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp" />
+    <ImageView
+        android:id="@+id/tipsIcon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/settingsIcon"
+        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/tip_icon"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp" />
     <LinearLayout
         android:id="@+id/subFragmentContainer"
         android:layout_width="wrap_content"
