--- a/app/src/main/res/layout/shop_item.xml
+++ b/app/src/main/res/layout/shop_item.xml
@@ -3,6 +3,7 @@
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginBottom="8dp">
     <ImageView
         android:layout_width="wrap_content"
@@ -38,6 +39,7 @@
         android:textColor="@color/white"
         android:fontFamily="@font/unispace"
         android:textSize="12sp"
+        tools:text="Deals 4x damage. Cooldown: 10 secs."
         android:layout_marginBottom="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@id/itemName" />
