--- a/app/src/main/res/layout/death_screen.xml
+++ b/app/src/main/res/layout/death_screen.xml
@@ -134,7 +134,7 @@
         app:layout_constraintEnd_toEndOf="@id/healthVal" />
     <Button
         android:id="@+id/tryAgainButton"
-        android:layout_width="wrap_content"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:text="@string/try_again"
         android:textAllCaps="false"
