--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -37,6 +37,13 @@
         android:layout_marginTop="8dp"
         android:layout_marginLeft="16dp" />
     <LinearLayout
+        android:id="@+id/pauseDimmer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#80000000"
+        android:orientation="horizontal"
+        android:visibility="gone"/>
+    <LinearLayout
         android:id="@+id/subFragmentContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
