--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -27,15 +27,28 @@
         android:src="@drawable/cog"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="16dp" />
-    <ImageView
+    <LinearLayout
         android:id="@+id/tipsIcon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/settingsIcon"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:src="@drawable/tip_icon"
         android:layout_marginTop="8dp"
-        android:layout_marginLeft="16dp" />
+        android:layout_marginLeft="16dp"
+        android:gravity="center">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/tip_icon"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tips"
+            android:textColor="@color/white"
+            android:fontFamily="@font/unispace"
+            android:textSize="16sp"/>
+    </LinearLayout>
     <LinearLayout
         android:id="@+id/pauseDimmer"
         android:layout_width="match_parent"
