--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -177,7 +177,7 @@
     <LinearLayout
         android:id="@+id/clearDataConfirmation"
         android:layout_width="250dp"
-        android:layout_height="wrap_content"
+        android:layout_height="280dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
